# holo-router

./: default.nix
.github/: settings.yml
.github/workflows/: deploy-to-devnet.yml  deploy-to-mainnet.yml
agent/: Cargo.toml  default.nix
agent/src/: main.rs
gateway/: Cargo.toml  default.nix  shell.nix
gateway/src/: main.rs
registry/: Cargo.toml  package-lock.json  package.json  wrangler.toml
registry/lib/routes/: dns-query.js
registry/src/: lib.rs
